--- a/testingExercise05/.classpath
+++ b/testingExercise05/.classpath
@@ -36,7 +36,7 @@
 	<classpathentry kind="lib" path="C:/Users/watso/Downloads/mockito-core-5.12.0.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-17">
 		<attributes>
-			<attribute name="module" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/Users/watso/.m2/repository/org/objenesis/objenesis/3.3/objenesis-3.3.jar"/>
